contact y avances de detail category

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -459,8 +459,8 @@ header
 /******** Form section *************/
 
 .form-section
-  background #f5f5f5
-  padding 60px 0
+  background transparent
+  padding 0
   .title, .text-form
     color #565656
 
@@ -486,7 +486,7 @@ header
   box-shadow ease-in-out .15s
 
   &:focus
-    border-color #ffffff
+    border-color #e50983
     outline 0
     -webkit-box-shadow 0 0 0 9px rgba(0, 0, 0, 0)
     box-shadow 0 0 0 9px rgba(0, 0, 0, 0)
