--- a/app/templates/sports.html
+++ b/app/templates/sports.html
@@ -1,7 +1,7 @@
 <section id="content-area">
     <div class="container">
         <ol class="breadcrumb">
-            <li><a href="#"><i class="fa fa-angle-left"></i> Home</a></li>
+            <li><a href="#"><i class="fa fa-angle-left"></i> Inicio</a></li>
             <li><a href="#">Library</a></li>
             <li class="active">Data</li>
         </ol>
