--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -13,13 +13,14 @@
         <div class="row">
             <div class="col-md-12 content-pages">
                 <div class="container">
-                    <div class="col-sm-6 no-padding" ng-repeat=" sport in Post.list">
-                        <div class="img-size wow slideInUp" data-wow-duration="2s">
-                            <a title="Leer más" post-link="{ link: {url: sport.link, target: '_blank'} }"
-                               ui-sref="project_detail({slug: sport.slug})">
-                                <img class="portfolio_img" post-image="{{ sport.urlImages.medium }}">
-                                <h1>{{ sport.title }}</h1>
-                            </a>
+                    <div class="col-md-4">
+                        <div class="box-default">
+                            <div class="box-header">
+                                <a href="#"><img src="img/sujetador-deportivo1.jpg" alt=""/></a>
+                            </div>
+                            <div class="box-container">
+                                <h1>Sujetador Blue Mía</h1>
+                            </div>
                         </div>
                     </div>
                     <div class="col-sm-12" ng-show="Post.busy">
