--- a/app/templates/project_detail.html
+++ b/app/templates/project_detail.html
@@ -7,7 +7,7 @@
         </ol>
         <div class="row">
             <div class="col-md-12">
-                <h2 class="title">Crossfit</h2>
+                <h2 class="title">title detail sport</h2>
             </div>
         </div>
         <div class="row">
@@ -25,66 +25,44 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-sm-4 no-padding">
-                        <a href="#">
-                            <div class="box-default">
-                                <div class="box-header">
-                                    <img src="img/sujetador-deportivo1.jpg" alt=""/>
-                                </div>
-                                <div class="box-container">
-                                    <h1>Sujetador Blue Mía</h1>
-                                </div>
+                    <div class="col-md-8">
+                        <div class="box-detail">
+                            <div class="title">
+                                <h1>Sudadera Blue Mía</h1>
                             </div>
-                        </a>
-                    </div>
-                    <div class="col-sm-4 no-padding">
-                        <a href="#">
-                            <div class="box-default">
-                                <div class="box-header">
-                                    <img src="img/sujetador-deportivo1.jpg" alt=""/>
-                                </div>
-                                <div class="box-container">
-                                    <h1>Sujetador Blue Mía</h1>
-                                </div>
+                            <div class="description">
+                                <p>
+                                    -Fabricación de 52% Poliéster Reciclado / 48% Poliéster
+                                    con paneles de malla para transpirabilidad con ligereza.
+                                    Cada fibra cuenta: El poliéster reciclado ahorra recursos
+                                    y disminuye las emisiones.
+
+                                    -Ajuste Regular - no muy apretado, no muy holgado,
+                                    perfecto para todos los entrenamientos.
+                                </p>
                             </div>
-                        </a>
-                    </div>
-                    <div class="col-sm-4 no-padding">
-                        <a href="#">
-                            <div class="box-default">
-                                <div class="box-header">
-                                    <img src="img/sujetador-deportivo1.jpg" alt=""/>
-                                </div>
-                                <div class="box-container">
-                                    <h1>Sujetador Blue Mía</h1>
-                                </div>
+                            <!-- se muestra si es distribuidor (log)-->
+                            <div class="no-distribuidor">
+                                <p>
+                                    ¿No eres distribuidor y deseas obtener esta o varias
+                                    prendas?, comunicate con nosotros y con gusto
+                                    te atenderemos.
+                                </p>
                             </div>
-                        </a>
-                    </div>
-                    <div class="col-sm-4 no-padding">
-                        <a href="#">
-                            <div class="box-default">
-                                <div class="box-header">
-                                    <img src="img/sujetador-deportivo1.jpg" alt=""/>
-                                </div>
-                                <div class="box-container">
-                                    <h1>Sujetador Blue Mía</h1>
-                                </div>
+                            <!-- Se muestra cuando eres distribuidor -->
+                            <div class="distribuidor">
+                                <label for="selectItems">Selecciona la cantidad</label>
+                                <select name="" id="selectItems">
+                                    <option value="">1</option>
+                                    <option value="">2</option>
+                                    <option value="">3</option>
+                                    <option value="">4</option>
+                                </select>
                             </div>
-                        </a>
+                            <button class="btn-orange btn-block"> <i class="fa fa-shopping-cart"></i> Agregar a carrito</button>
+                        </div>
                     </div>
-                    <div class="col-sm-4 no-padding">
-                        <a href="#">
-                            <div class="box-default">
-                                <div class="box-header">
-                                    <img src="img/sujetador-deportivo1.jpg" alt=""/>
-                                </div>
-                                <div class="box-container">
-                                    <h1>Sujetador Blue Mía</h1>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
+
                     <div class="col-sm-12" ng-show="project.busy">
                         <h3 class="text-center">Cargando <i class="fa fa-spinner fa-spin"></i></h3>
                     </div>
