--- a/app/templates/single.html
+++ b/app/templates/single.html
@@ -1,17 +1,50 @@
 <section id="content-area">
     <div class="container">
+        <ol class="breadcrumb">
+            <li><a href="#"><i class="fa fa-angle-left"></i> Home</a></li>
+            <li><a href="#">Library</a></li>
+            <li class="active">Data</li>
+        </ol>
         <div class="row">
-            <div class="col-md-12 text-center">
+            <div class="col-md-12">
                 <h2 class="title">{{ post.detail.title }}</h2>
-                <hr class="divider"/>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-12 content-pages">
-                <div class="container">
+        <div class="contaoner">
+            <div class="col-md-9 content-pages">
+                <div class="row">
                     <div ng-bind-html="post.detail.content"></div>
                     <div class="col-sm-12" ng-show="post.busy">
                         <h3 class="text-center">Cargando <i class="fa fa-spinner fa-spin"></i></h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 widgets">
+                <div class="box-sidebar">
+                    <div class="box-header">
+                        Prendas destacadas
+                    </div>
+                    <div class="box-body">
+                        <ul class="list-group">
+                            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
+                            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
+                            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
+                            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="box-sidebar">
+                    <div class="box-header">
+                        Contáctanos
+                    </div>
+                    <div class="box-body">
+                        <ul class="list-group">
+                            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
+                            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
+                            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
+                            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
+                            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
