--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -61,6 +61,39 @@ body
 .white
   color white !important
 
+/************** Grid css******************/
+.deckgrid[deckgrid]::before
+  content '3 .column.size-1-3'
+  font-size 0
+  visibility hidden
+
+.deckgrid
+  margin 0 auto
+  .column
+    float left
+    &.size-1-5
+      width 20%
+    &.size-1-4
+      width 25% /* 325px */
+    &.size-1-3
+      width 33.33333%
+    &.size-1-2
+      width 50%
+    &.size-1-1
+      width 100%
+
+@media screen and (max-width: 840px)
+  .deckgrid[deckgrid]::before
+    content '3 .column.size-1-3'
+
+@media screen and (min-width: 481px) and (max-width: 768px)
+  .deckgrid[deckgrid]::before
+    content '2 .column.size-1-2'
+
+@media only screen and (max-device-width : 320px),  only screen and (max-width : 480px)
+  .deckgrid[deckgrid]::before
+    content '1 .column.size-1-1'
+
 /************** main css ******************/
 header
   .navbar-default
