--- a/app/css/main.css
+++ b/app/css/main.css
@@ -59,6 +59,47 @@ body {
 .white {
   color: #fff !important;
 }
+.deckgrid[deckgrid]::before {
+  content: '3 .column.size-1-3';
+  font-size: 0;
+  visibility: hidden;
+}
+.deckgrid {
+  margin: 0 auto;
+}
+.deckgrid .column {
+  float: left;
+}
+.deckgrid .column.size-1-5 {
+  width: 20%;
+}
+.deckgrid .column.size-1-4 {
+  width: 25% /* 325px */;
+}
+.deckgrid .column.size-1-3 {
+  width: 33.33333%;
+}
+.deckgrid .column.size-1-2 {
+  width: 50%;
+}
+.deckgrid .column.size-1-1 {
+  width: 100%;
+}
+@media screen and (max-width: 840px) {
+  .deckgrid[deckgrid]::before {
+    content: '3 .column.size-1-3';
+  }
+}
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  .deckgrid[deckgrid]::before {
+    content: '2 .column.size-1-2';
+  }
+}
+@media only screen and (max-device-width: 320px), only screen and (max-width: 480px) {
+  .deckgrid[deckgrid]::before {
+    content: '1 .column.size-1-1';
+  }
+}
 header .navbar-default {
   background: #f5f5f5;
   height: 100px;
