--- a/app/templates/page.html
+++ b/app/templates/page.html
@@ -6,19 +6,21 @@
             <li class="active">Data</li>
         </ol>
         <div class="row">
-            <div class="col-md-12">
-                <h2 class="title">hello there</h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-9 content-pages">
-                <div class="row">
-                    <!--content here-->
-                    <div class="content-detail">
-                        <p>Lorem inpsum to said cool</p>
-                    </div>
-                    <div class="col-sm-12" ng-show="page.busy">
-                        <h3 class="text-center">Cargando <i class="fa fa-spinner fa-spin"></i></h3>
+            <div class="col-md-9">
+                <h2 class="title">{{ Page.detail.title }}</h2>
+
+                <img ng-src="{{ Page.detail.urlImages.medium }}" alt="{{ Page.detail.title }}"/>
+
+                <div ng-bind-html="Page.detail.content"></div>
+                <!--gallery here-->
+                <div deckgrid class="deckgrid gallery" source="Page.detail.galleryImages">
+                    <div class="a-card portfolio_content box-portfolio" data-wow-duration="2s">
+                        <a post-link="{ link: {url: card.link, target: '_blank'} }"
+                           href="{{ card.urlImages.original }}"
+                           data-lightbox="gallery-images">
+                            <img class="thumbnail img-responsive" post-image="{{ card.urlImages.large }}"
+                                 alt="{{ card.title }}">
+                        </a>
                     </div>
                 </div>
             </div>
