Fix minors to blog.html

--- a/app/templates/single.html
+++ b/app/templates/single.html
@@ -25,48 +25,7 @@
                 </div>
             </div>
             <div class="col-md-3 widgets">
-                <div class="box-sidebar">
-                    <!-- Blog Search -->
-                    <div class="box-header">
-                        Prendas destacadas
-                    </div>
-                    <div class="input-group">
-                        <input type="text" class="form-control">
-                        <span class="input-group-btn">
-                            <button class="btn btn-default" type="button">
-                                <span class="glyphicon glyphicon-search"></span>
-                            </button>
-                        </span>
-                    </div>
-
-                </div>
-                <div class="box-sidebar">
-                    <div class="box-header">
-                        Prendas destacadas
-                    </div>
-                    <div class="box-body">
-                        <ul class="list-group">
-                            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
-                            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
-                            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
-                            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="box-sidebar">
-                    <div class="box-header">
-                        Contáctanos
-                    </div>
-                    <div class="box-body">
-                        <ul class="list-group">
-                            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
-                            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
-                            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
-                            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
-                            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
-                        </ul>
-                    </div>
-                </div>
+                <ng-include src="'/templates/partials/sidebar.html'"></ng-include>
             </div>
         </div>
     </div>
