--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -6,72 +6,45 @@
             <li class="active">Data</li>
         </ol>
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-9">
                 <h2 class="title">Blog</h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-9 content-pages" infinite-scroll='Post.getMorePosts()'
-                 infinite-scroll-disabled='Post.busy || !Post.next || Post.loadPosts'>
-                <div class="row">
-                    <div class="col-sm-4" ng-repeat="entry in Post.list">
-                        <div class="box-default box-blog">
-                            <a post-link="{ link: {url: entry.link, target: '_blank'} }"
-                               ui-sref="post_detail({slug: entry.slug})" title="{{ entry.title }}">
-                                <img class="img-responsive" post-image="{{ entry.urlImages.thumbnails }}"
-                                     alt="{{ entry.title }}">
+                <div class="content-pages" infinite-scroll='Post.getMorePosts()'
+                     infinite-scroll-disabled='Post.busy || !Post.next || Post.loadPosts'>
+                    <div class="row">
+                        <div class="col-sm-4" ng-repeat="entry in Post.list">
+                            <div class="box-default box-blog">
+                                <a post-link="{ link: {url: entry.link, target: '_blank'} }"
+                                   ui-sref="post_detail({slug: entry.slug})" title="{{ entry.title }}">
+                                    <img class="img-responsive" post-image="{{ entry.urlImages.thumbnails }}"
+                                         alt="{{ entry.title }}">
 
-                                <h2>{{ entry.title }}</h2>
+                                    <h2>{{ entry.title }}</h2>
 
-                                <p>{{ entry.excerpt }}</p>
+                                    <p>{{ entry.excerpt }}</p>
 
-                                <div class="comment-area">
-                                    <div class="date floatleft">
-                                        <p><span><i class="fa fa-calendar-o"></i></span> {{ entry.createdAt | date : shortDate }} </p>
+                                    <div class="comment-area">
+                                        <div class="date floatleft">
+                                            <p><span><i class="fa fa-calendar-o"></i></span>
+                                                {{ entry.createdAt | date : shortDate }} </p>
+                                        </div>
                                     </div>
-                                </div>
-                            </a>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-sm-12" ng-show="Post.busy">
+                            <h3 class="text-center">Cargando <i class="fa fa-spinner fa-spin"></i></h3>
+                        </div>
+
+                        <div class="col-sm-12" ng-show="!Post.busy">
+                            <h2 class="text-center" ng-show="!Post.list.length">Lo sentimos no contamos con contenido
+                                disponible</h2>
                         </div>
                     </div>
-                    <div class="col-sm-12" ng-show="Post.busy">
-                        <h3 class="text-center">Cargando <i class="fa fa-spinner fa-spin"></i></h3>
-                    </div>
-
-                    <div class="col-sm-12" ng-show="!Post.busy">
-                        <h2 class="text-center" ng-show="!Post.list.length">Lo sentimos no contamos con contenido
-                            disponible</h2>
-                    </div>
+                    <!--post list -->
                 </div>
-                <!--post list -->
             </div>
             <div class="col-md-3 widgets">
-                <div class="box-sidebar">
-                    <div class="box-header">
-                        Prendas destacadas
-                    </div>
-                    <div class="box-body">
-                        <ul class="list-group">
-                            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
-                            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
-                            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
-                            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="box-sidebar">
-                    <div class="box-header">
-                        Contáctanos
-                    </div>
-                    <div class="box-body">
-                        <ul class="list-group">
-                            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
-                            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
-                            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
-                            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
-                            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
-                        </ul>
-                    </div>
-                </div>
+                <ng-include src="'/templates/partials/sidebar.html'"></ng-include>
             </div>
         </div>
     </div>
