--- a/app/templates/page.html
+++ b/app/templates/page.html
@@ -25,33 +25,7 @@
                 </div>
             </div>
             <div class="col-md-3 widgets">
-                <div class="box-sidebar">
-                    <div class="box-header">
-                        Prendas destacadas
-                    </div>
-                    <div class="box-body">
-                        <ul class="list-group">
-                            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
-                            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
-                            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
-                            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="box-sidebar">
-                    <div class="box-header">
-                        Contáctanos
-                    </div>
-                    <div class="box-body">
-                        <ul class="list-group">
-                            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
-                            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
-                            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
-                            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
-                            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
-                        </ul>
-                    </div>
-                </div>
+                <ng-include src="'/templates/partials/sidebar.html'"></ng-include>
             </div>
         </div>
     </div>
