--- a/app/templates/partials/sidebar.html
+++ b/app/templates/partials/sidebar.html
@@ -1,7 +1,7 @@
 <div class="box-sidebar">
     <!-- Blog Search -->
     <div class="box-header">
-        Prendas destacadas
+        Busqueda
     </div>
     <div class="input-group">
         <input type="text" class="form-control">
@@ -11,7 +11,6 @@
                             </button>
                         </span>
     </div>
-
 </div>
 <div class="box-sidebar">
     <div class="box-header">
@@ -19,10 +18,9 @@
     </div>
     <div class="box-body">
         <ul class="list-group">
-            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
-            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
-            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
-            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
+            <li class="list-group-item" ng-repeat="outstanding in outstandings">
+                <a ui-sref="project_detail({slug: outstanding.slug})">{{ outstanding.title }}</a>
+            </li>
         </ul>
     </div>
 </div>
@@ -32,11 +30,10 @@
     </div>
     <div class="box-body">
         <ul class="list-group">
-            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
-            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
-            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
-            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
-            <li class="list-group-item"><a href="#">Cras justo odio</a></li>
+            <li class="list-group-item"><a href="mailto:info@bluemia.com.mx">info@bluemia.com.mx</a></li>
+            <li class="list-group-item"><a href="tel:+1800229933">1800229933</a></li>
+            <li class="list-group-item"><a href="#">Dirección 1</a></li>
+
         </ul>
     </div>
 </div>
