--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -13,13 +13,14 @@
         <div class="row">
             <div class="col-md-12 content-pages">
                 <div class="container">
-                    <div class="col-md-4">
+                    <div class="col-md-4" ng-repeat="entry in Post.list">
                         <div class="box-default">
                             <div class="box-header">
-                                <a href="#"><img src="img/sujetador-deportivo1.jpg" alt=""/></a>
+                                <a ui-sref="project_detail({slug: entry.slug})"><img
+                                        post-image="{{ entry.urlImages.medium }}" alt="{{ entry.title }}"/></a>
                             </div>
                             <div class="box-container">
-                                <h1>Sujetador Blue Mía</h1>
+                                <h1>{{ entry.title }}</h1>
                             </div>
                         </div>
                     </div>
