Same format for categories for ropa and deportes

--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -13,13 +13,15 @@
         <div class="row">
             <div class="col-md-12 content-pages">
                 <div class="container">
-                    <div class="col-sm-6 no-padding" ng-repeat=" sport in Post.list">
-                        <div class="img-size wow slideInUp" data-wow-duration="2s">
-                            <a title="Leer más" post-link="{ link: {url: sport.link, target: '_blank'} }"
-                               ui-sref="project_detail({slug: sport.slug})">
-                                <img class="portfolio_img" post-image="{{ sport.urlImages.medium }}">
-                                <h1>{{ sport.title }}</h1>
-                            </a>
+                    <div class="col-md-4" ng-repeat="entry in Post.list">
+                        <div class="box-default">
+                            <div class="box-header">
+                                <a ui-sref="project_detail({slug: entry.slug})"><img
+                                        post-image="{{ entry.urlImages.medium }}" alt="{{ entry.title }}"/></a>
+                            </div>
+                            <div class="box-container">
+                                <h1>{{ entry.title }}</h1>
+                            </div>
                         </div>
                     </div>
                     <div class="col-sm-12" ng-show="Post.busy">
