--- a/app/templates/sports.html
+++ b/app/templates/sports.html
@@ -13,13 +13,15 @@
         <div class="row">
             <div class="col-md-12 content-pages">
                 <div class="container">
-                    <div class="col-sm-6 no-padding" ng-repeat=" sport in Sport.sports">
-                        <div class="img-size wow slideInUp" data-wow-duration="2s">
-                            <a title="Leer más" post-link="{ link: {url: sport.link, target: '_blank'} }"
-                               ui-sref="post_category({slug: sport.slug})">
-                                <img post-image="{{ sport.urlImages.medium }}">
+                    <div class="col-md-4" ng-repeat=" sport in Sport.sports">
+                        <div class="box-default">
+                            <div class="box-header">
+                                <a ui-sref="post_category({slug: sport.slug})"><img
+                                        post-image="{{ sport.urlImages.original }}" alt="{{ sport.name }}"/></a>
+                            </div>
+                            <div class="box-container">
                                 <h1>{{ sport.name }}</h1>
-                            </a>
+                            </div>
                         </div>
                     </div>
                     <div class="col-sm-12" ng-show="Sport.busy">
@@ -27,7 +29,7 @@
                     </div>
 
                     <div class="col-sm-12" ng-show="!Sport.busy">
-                        <h2 class="text-center" ng-show="!Post.list.length">Lo sentimos no contamos con contenido
+                        <h2 class="text-center" ng-show="!Sport.sports.length">Lo sentimos no contamos con contenido
                             disponible</h2>
                     </div>
                 </div>
