--- a/app/templates/project_detail.html
+++ b/app/templates/project_detail.html
@@ -1,10 +1,5 @@
 <section id="content-area">
     <div class="container">
-        <ol class="breadcrumb">
-            <li><a href="#"><i class="fa fa-angle-left"></i> Home</a></li>
-            <li><a href="#">Library</a></li>
-            <li class="active">Data</li>
-        </ol>
         <div class="row">
             <div class="col-md-12">
                 <h2 class="title">{{ Item.detail.title }}</h2>
@@ -50,7 +45,8 @@
                                     <option value="">4</option>
                                 </select>
                             </div>
-                            <button class="btn-orange btn-block"> <i class="fa fa-shopping-cart"></i> Agregar a carrito</button>
+                            <button class="btn-orange btn-block"><i class="fa fa-shopping-cart"></i> Agregar a carrito
+                            </button>
                         </div>
                     </div>
 
